# opengl-solar-system

./: .gitignore  CMakeLists.txt  README.md  build_and_run.sh  config.ini
.devcontainer/: devcontainer.json
include/: camera.h  config.h  ini.h  planet.h  scenario.h  shader.h
include/glad/: glad.h
shaders/: basic.frag  basic.vert  emissive.frag  emissive.vert  lighting.frag  lighting.vert  skybox.vert
src/: camera.cpp  config.cpp  glad.c  ini.c  main.cpp  planet.cpp  scenario.cpp  shader.cpp  stb_image.cpp
